--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+def AAVersion = '4.0-SNAPSHOT'
+
 
 android {
     compileSdkVersion 25
@@ -31,7 +34,9 @@ dependencies {
 
     //database orm
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-
+    //android annotations
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
 
 
 }
