--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,19 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
+        // replace with the current version of the Android plugin
         classpath 'com.android.tools.build:gradle:2.2.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // replace with the current version of the android-apt plugin
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
+repositories {
+    mavenCentral()
+    mavenLocal()
 }
 
 task clean(type: Delete) {
